bitfield/tests/04-multiple-of-8bits.stderr
error[E0080]: evaluation of constant value failed
  --> tests/04-multiple-of-8bits.rs:53:1
   |
53 | #[bitfield]
   | ^^^^^^^^^^^ attempt to compute `0_usize - 7_usize`, which would overflow
   |
   = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)
